--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.14.4",
     "@babel/register": "^7.13.16",
     "@babel/runtime-corejs3": "^7.14.0",
+    "@nutui/babel-plugin-separate-import": "^1.2.2",
     "add-asset-html-webpack-plugin": "^3.2.0",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
@@ -68,9 +69,9 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@nutui/nutui": "^2.3.3",
     "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
-    "mint-ui": "^2.2.13",
     "mockjs": "^1.1.0",
     "promise": "^8.1.0",
     "vue": "^2.6.11",
