--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "promise": "^8.1.0",
+    "ua-parser-js": "^0.7.28",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
