--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "ua-parser-js": "^0.7.28",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "wangeditor": "^4.7.5"
   },
   "repository": {
     "type": "git",
